--- a/index.html
+++ b/index.html
@@ -46,16 +46,6 @@
 
             <li class="active"><a href="#"><span class="fa fa-home fa-fw"></span> Home</a></li>
 
-            <!--<li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-desktop fa-fw"></span> Web Projects<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a target="_blank" href="http://lamp.cse.fau.edu/~nsaleh2012/p1">Postcard-Maker 5000</a></li>
-                <li><a target="_blank" href="http://lamp.cse.fau.edu/~nsaleh2012/hw2">FrozenOMENAL</a></li>
-                <li><a target="_blank" href="http://lamp.cse.fau.edu/~nsaleh2012/hw3">Currency Converter #1</a></li>
-                <li><a target="_blank" href="http://lamp.cse.fau.edu/~nsaleh2012/hw4">Currency Converter #2</a></li>
-                <li><a target="_blank" href="http://lamp.cse.fau.edu/~nsaleh2012/Main.html">myFAU Portal</a></li>
-              </ul>
-            </li>-->
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-university fa-fw"></span> Research<b class="caret"></b></a>
@@ -67,9 +57,8 @@
               </ul>
             </li>
 
-            <!--<li><a href="https://github.com/nadeensaleh"><span class="fa fa-code fa-fw"></span> Git Repository</a></li>-->
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
 
@@ -119,8 +108,7 @@
 
     <script>
       var str = "<span class='code' style='font-size: 50px'>" +
-          "nadeen saleh // comp sci" +
-          "<br>" +
+          "<span style='display: inline'>nadeen saleh // comp sci</span><br>" +
           "<h2 style='display: inline'> <span style='color: green'>current status:</span> intern @ Ultimate Software</h2>" +
         "</span>",
         i = 0,
