--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="ns_ninja.png">
 
     <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
@@ -21,7 +21,7 @@
 
     <!-- Custom styles for this template -->
     <link href="homepage.css" rel="stylesheet">
-    <link href="http://visualidiot.com/files/real-world.css" rel="stylesheet">
+    <link href="real-world.css" rel="stylesheet">
 
     <title>Nadeen Saleh</title>
 
