--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body role="document">
 
-    <!-- Fixed navbar -->
+    <!--
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -60,8 +60,7 @@
           </ul>
         </div>
       </div>
-    </div>
-
+    </div>-->
     <div class="container theme-showcase" role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
