--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body role="document">
 
-    <!--
+    <!-- Fixed navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -60,7 +60,8 @@
           </ul>
         </div>
       </div>
-    </div>-->
+    </div>
+
     <div class="container theme-showcase" role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -102,8 +103,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
-    <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
+    <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="https://getbootstrap.com/assets/js/docs.min.js"></script>
 
     <script>
       var str = "<span class='code' style='font-size: 50px'>" +
