--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="links">
           <p>
             <a target="_blank" href="mailto:ns@nadeensaleh.com"><span class="fa fa-envelope-square fa-fw"></span></a>
-            <a target="_blank" href="https://www.linkedin.com/in/nadeensaleh.com"><span class="fa fa-linkedin-square fa-fw"></span></a>
+            <a target="_blank" href="https://www.linkedin.com/in/nadeensaleh"><span class="fa fa-linkedin-square fa-fw"></span></a>
             <a target="_blank" href="https://github.com/nadeensaleh"><span class="fa fa-github-square fa-fw"></span></a>
             <a target="_blank" href="https://www.twitter.com/nadeensaleh_"><span class="fa fa-twitter-square fa-fw"></span></a>
           </p>
