--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -65,7 +66,7 @@
 
         <div class="row">
           <section class="bio col-md-6">
-            <p>Senior at Florida Atlantic University, junior analyst on the side. Interested in data science as it pertains to bettering society and improving the software development process. Always on the search for ways to apply data mining tools and techniques in industry, academia and personal projects. Hoping to obtain a PhD in CS with a focus in big data and applied machine learning.</p>
+            <p>Recent FAU grad and junior data analyst. Interested in data science as it pertains to bettering society and optimizing industry processes. Always on the search for ways to apply data mining tools and techniques in industry, academia and personal projects. Hoping to obtain a Masters degree in applied statistics or data science in the near future.</p>
           </section>
           <section class="col-md-6">
             <div>
