--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="row">
           <section class="bio col-md-6">
-            <p>Recent FAU grad and junior data analyst. Interested in data science as it pertains to bettering society and optimizing industry processes. Always on the search for ways to apply data mining tools and techniques in industry, academia and personal projects. Hoping to obtain a Masters degree in applied statistics or data science in the near future.</p>
+            <p>Recent FAU grad and junior data analyst. Interested in data science as it pertains to bettering society and optimizing industry processes. Always on the search for ways to apply data mining tools and techniques in industry, academia and personal projects. Planning to pursue a graduate degree in applied statistics or data science in the near future.</p>
           </section>
           <section class="col-md-6">
             <div>
