site construction warning

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="row">
           <section class="bio col-md-6">
-            <p>Recent FAU grad and junior data analyst. Interested in data science as it pertains to bettering society and optimizing industry processes. Always on the search for ways to apply data mining tools and techniques in industry, academia and personal projects. Planning to pursue a graduate degree in applied statistics or data science in the near future.</p>
+            <p><span class="fa exclamation-circle fa-fw"></span> SITE UNDER CONSTRUCTION</p>
           </section>
           <section class="col-md-6">
             <div>
@@ -95,7 +95,7 @@
     <script>
       var str = "<span class='code'>" +
           "<span style='display: inline; font-size: 50px;'>nadeen saleh // comp sci</span><br>" +
-          "<span style='display: inline; font-size: 30px'> <span style='color: green'>current status:</span> intern @ Ultimate Software</span>" +
+          "<span style='display: inline; font-size: 30px'> <span style='color: green'>current status:</span> BI Analyst @ Hired Inc.</span>" +
         "</span>",
         i = 0,
         isTag,
