site and resume update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="row">
           <section class="bio col-md-6">
-            <p><span class="fa exclamation-circle fa-fw"></span> SITE UNDER CONSTRUCTION</p>
+            <p><span class="fa fa-exclamation-circle fa-fw"></span> SITE UNDER CONSTRUCTION</p>
           </section>
           <section class="col-md-6">
             <div>
@@ -94,7 +94,7 @@
 
     <script>
       var str = "<span class='code'>" +
-          "<span style='display: inline; font-size: 50px;'>nadeen saleh // comp sci</span><br>" +
+          "<span style='display: inline; font-size: 50px;'>Nadeen Saleh Ibrahim</span><br>" +
           "<span style='display: inline; font-size: 30px'> <span style='color: green'>current status:</span> BI Analyst @ Hired Inc.</span>" +
         "</span>",
         i = 0,
