--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Nadeen Saleh">
-    <link rel="shortcut icon" href="ns_ninja.png">
+    <meta name="author" content="Nadeen Saleh Ibrahim">
+    <link rel="icon" href="ns_ninja.png">
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
     <link href="homepage.css" rel="stylesheet">
     <link href="real-world.css" rel="stylesheet">
 
-    <title>Nadeen Saleh</title>
+    <title>Nadeen Saleh Ibrahim</title>
 
   </head>
 
