--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Nadeen Saleh</a>
+          <a class="navbar-brand" href="#">Nadeen Saleh Ibrahim</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
